# adventofcode

./: .gitignore
2017/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2018/day1/: step1.py  step2.py
2018/day2/: step1.py  step2.py
2018/day3/: step1.py  step2.py
2018/day4/: step1.py  step2.py
2018/day5/: step1.py  step2.py
2018/day6/: step1.py  step2.py
2018/day7/: step1.py  step2.py
2018/day8/: step1.py
2019/day2/: step1.py
2020/: Pipfile  day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2020/tests/: test_day1.py  test_day10.py  test_day11.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
2021/: Makefile  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2021/tests/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
2022/: Pipfile  day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2022/tests/: test_day1.py  test_day10.py  test_day11.py  (+8 more)
2023/: Makefile  day1.py  day2.py  day3.py  day4.py  pyproject.toml
2023/tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py
