[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Ian Wootten <3598161+iwootten@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pep8 = "^1.7.1"
flake8 = "^6.1.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
